fix: change overflow, margins for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,11 @@
 }
 
 /* Global styles */
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   overflow-y: hidden;
 }
@@ -70,6 +75,7 @@ body {
   font-family: var(--main-font-family);
   color: var(--text-dark-on-light-color);
   max-height: 100vh;
+  margin-bottom: 0;
 }
 
 h1,
@@ -363,6 +369,10 @@ textarea {
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .main-container-wrapper-cg {
     flex: 1;
     max-width: 65%;
